# rust-rg353-hello

./: Cargo.toml  Changes.md  Makefile  README.md  RustGnuTest.sh  log.txt
.github/workflows/: ci.yml  release.yml
src/: main.rs
