[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.arm-linux-musleabi]
linker = "arm-linux-musleabi-gcc"

[target.armv7-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"
linker = "arm-linux-gnueabi-gcc"