[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
openssl = { version = "0.10.35", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabi-gcc"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3